--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-  background-image: url("assets/img/friends.jpg");
+  background-color: #657fa7;
+  background-image: linear-gradient(315deg, #b8c6db 0%, #c78ce0 100%);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -79,10 +80,11 @@ form {
 
 .rightAnswerOne, .rightAnswerTwo, .rightAnswerThree, .rightAnswerFour, 
 .rightAnswerFive {
-  color: #06FF00;
+  color: #1C7947;
   text-align: center;
-  font-size: 17px;
+  font-size: 18px;
   display: none;
+  font-weight:bold;
 }
 
 @media all and (max-width: 1000px) {
